RPN-1004: add filter
