# api/protocol-api-order/openapi.yaml
@@ -332,6 +332,7 @@ paths:
 
   "/v0.1/orders/all":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getOrdersAll
@@ -393,6 +394,7 @@ paths:
 
   "/v0.1/orders/sell/byMaker":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getSellOrdersByMaker
@@ -432,8 +434,69 @@ paths:
         '500':
           $ref: "#/components/responses/ServerError"
 
+  "/v0.1/orders/sell/byMakerAndByStatus":
+    get:
+      tags:
+        - order-controller
+      operationId: getSellOrdersByMakerAndByStatus
+      parameters:
+        - name: maker
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: origin
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: platform
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Platform"
+        - name: continuation
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: size
+          in: query
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          $ref: "#/components/responses/OrderPage"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/ServerError"
+
   "/v0.1/orders/sell/byItem":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getSellOrdersByItem
@@ -483,8 +546,79 @@ paths:
         '500':
           $ref: "#/components/responses/ServerError"
 
+  "/v0.1/orders/sell/byItemAndByStatus":
+    get:
+      tags:
+        - order-controller
+      operationId: getSellOrdersByItemAndByStatus
+      parameters:
+        - name: contract
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: tokenId
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/BigInteger"
+        - name: maker
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: origin
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: platform
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Platform"
+        - name: continuation
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: size
+          in: query
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          $ref: "#/components/responses/OrderPage"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/ServerError"
+
   "/v0.1/orders/sell/byCollection":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getSellOrdersByCollection
@@ -524,8 +658,69 @@ paths:
         '500':
           $ref: "#/components/responses/ServerError"
 
+  "/v0.1/orders/sell/byCollectionAndByStatus":
+    get:
+      tags:
+        - order-controller
+      operationId: getSellOrdersByCollectionAndByStatus
+      parameters:
+        - name: collection
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: origin
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: platform
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Platform"
+        - name: continuation
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: size
+          in: query
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          $ref: "#/components/responses/OrderPage"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/ServerError"
+
   "/v0.1/orders/sell":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getSellOrders
@@ -560,10 +755,66 @@ paths:
         '500':
           $ref: "#/components/responses/ServerError"
 
+  "/v0.1/orders/sellByStatus":
+    get:
+      tags:
+        - order-controller
+      operationId: getSellOrdersByStatus
+      parameters:
+        - name: origin
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: platform
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Platform"
+        - name: continuation
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: size
+          in: query
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          $ref: "#/components/responses/OrderPage"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/ServerError"
+
   ###################### Bids ######################
 
   "/v0.1/orders/bids/byMaker":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getOrderBidsByMaker
@@ -603,8 +854,69 @@ paths:
         '500':
           $ref: "#/components/responses/ServerError"
 
+  "/v0.1/orders/bids/byMakerAndByStatus":
+    get:
+      tags:
+        - order-controller
+      operationId: getOrderBidsByMakerAndByStatus
+      parameters:
+        - name: maker
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: origin
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: platform
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Platform"
+        - name: continuation
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: size
+          in: query
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: true
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderBidStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          $ref: "#/components/responses/OrderBidsPage"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/ServerError"
+
   "/v0.1/orders/bids/byItem":
     get:
+      deprecated: true
       tags:
         - order-controller
       operationId: getOrderBidsByItem
@@ -654,6 +966,76 @@ paths:
         '500':
           $ref: "#/components/responses/ServerError"
 
+  "/v0.1/orders/bids/byItemAndByStatus":
+    get:
+      tags:
+        - order-controller
+      operationId: getOrderBidsByItemAndByStatus
+      parameters:
+        - name: contract
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: tokenId
+          in: query
+          required: true
+          schema:
+            $ref: "#/components/schemas/BigInteger"
+        - name: maker
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: origin
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Address"
+        - name: platform
+          in: query
+          required: false
+          schema:
+            $ref: "#/components/schemas/Platform"
+        - name: continuation
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: size
+          in: query
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            format: int32
+        - name: status
+          in: query
+          required: true
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderBidStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          $ref: "#/components/responses/OrderBidsPage"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/ServerError"
+
   "/v0.1/orders/all/byStatus":
     get:
       tags:
@@ -677,6 +1059,25 @@ paths:
             minimum: 1
             type: integer
             format: int32
+        - name: status
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/OrderStatus"
+        - name: startDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+        - name: endDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
       responses:
         '200':
           $ref: "#/components/responses/OrderPage"
@@ -686,6 +1087,7 @@ paths:
           $ref: "#/components/responses/ServerError"
   "/v0.1/bids/byItem":
     get:
+      deprecated: true
       tags:
         - order-bid-controller
       operationId: getBidsByItem
